deploy/deploy-sdk-docs.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: $APP_NAME
  namespace: front-prod
  labels:
    app: $APP_NAME
spec:
  replicas: 4
  selector:
    matchLabels:
      app: $APP_NAME
  template:
    metadata:
      labels:
        app: $APP_NAME
    spec:
      imagePullSecrets:
        - name: comingweb3-registry-secret
      containers:
        - name: container-api-prod
          image: $REGISTRY/$DOCKERHUB_NAMESPACE/$APP_NAME:$BUILD_NUMBER
          ports:
            - name: http-main
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 300Mi
          livenessProbe:
            tcpSocket:
              port: 80
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 80
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 2
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      serviceAccountName: default
      serviceAccount: default
      securityContext: {}
      affinity: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600

---
apiVersion: v1
kind: Service
metadata:
  name: $APP_NAME
  namespace: front-prod
spec:
  ports:
    - port: 80
      name: http-main
  selector:
    app: $APP_NAME

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: docs-omniswap-sui.omnibtc.finance
  namespace: front-prod
  annotations:
    external-dns.alpha.kubernetes.io/target: a5d156c18cea5820c.awsglobalaccelerator.com

spec:
  rules:
    - host: docs-omniswap-sui.omnibtc.finance
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: $APP_NAME
                port:
                  number: 80
